2002-01-29  Anders Carlsson  <andersca@gnu.org>

	* configure.in: Up to 1.110.0

	* schemas/desktop_gnome_peripherals_mouse.schemas: Change motion_threshold type
	to int.

2002-01-28  Ross Golder  <ross@golder.org>

	* configure.in: Updated popt URL.

2002-01-25  Darin Adler  <darin@bentspoon.com>

	* help-converters/gnome-vfs-module/help-method.c: Remove unused include <ctype.h>.
	* help-converters/info/html.c: Remove unused include <ctype.h>.
	* help-converters/man/gnome-man2html.c: Remove unused include <ctype.h>.
	* libgnome/gnome-config.c: (gnome_config_get_bool_with_default_):
	Use g_ascii_tolower instead of tolower and remove include of <ctype.h>.
	* libgnome/gnome-program.c: (rpmvercmp): Use g_ascii calls instead of
	the locale-sensitive <ctype.h> calls and remove include of <ctype.h>.
	* libgnome/gnome-score.c: (log_score): Use g_ascii_isspace instead of
	isspace and remove include of <ctype.h>.
	* libgnome/gnome-triggers.c: Remove unused include of <ctype.h>.

2002-01-23 John Fleck <jfleck@inkstain.net>

	* help-converters/docbook/gnome-customization/Makefile.am
	install gnome-custom.xsl and l10n.xml
	
2002-01-23  Peteris Krisjanis <peteris.krisjanis@ttc.lv>

	* configure.in: Added lv to ALL_LINGUAS

2002-01-23  Seth Nickell  <snickell@stanford.edu>

	* schemas/Makefile.am:
	* schemas/desktop_gnome_background.schemas:

	Spruce up Jonathan's cleanup of the schemas file and rename
	keys to more approximately match how we are using them
	and their names in the capplet.
	
	* schemas/desktop_gnome_file_views.schemas:

	Add file views schemas that Nautilus will shortly use.

Wed Jan 23 01:25:20 2002  Jonathan Blandford  <jrb@redhat.com>

	* schemas/desktop_gnome_background.schemas: clean up schemas file.

2002-01-21  Eric Baudais  <baudais@okstate.edu>

	* help-converters/docbook/gnome-customization/eric_titlepage.xsl: Cruft removed.
	* help-converters/docbook/gnome-xustomization/eric-customization: Cruft removed.