@@ -1,3 +1,8 @@
+2002-01-31 John Fleck <jfleck@inkstain.net>
+
+	* help-converters/docbook/gnome-db2html3.c
+	output "filename" rather than "filename.xml" for Eric's stylesheets
+
 2002-01-29  Anders Carlsson  <andersca@gnu.org>
 
 	* configure.in: Up to 1.110.0
